Se termino el formulario de registro y cita